# hippos

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  README_zh.md  config.yaml  docker-compose.yml  memory_openapi.yaml  pyproject.toml  surrealdb_ddl.surql  test_api.sh  test_mcp_server.sh  可执行落地计划.md  待办文档.md  技术架构文档.md  需求描述.md
.claude/: settings.json
.claude/commands/: analyze.md  find.md  ultrawork.md
.claude/hooks/: completion-check.sh  plan-reread.sh  pre-tool-rules.sh  pre-tool-use.sh  rules-loader.sh  session-start.sh  skill-forced-eval.sh  stop.sh
.claude/rules/: 01-code-quality.md  02-code-style.md  03-security.md  04-performance.md  05-documentation.md  06-context7-query.md  07-refactoring.md  architecture-rules.md  ui-ux-rules.md
.sisyphus/: boulder.json
.sisyphus/notepads/memory-system-transformation/: issues.md  learnings.md
.sisyphus/plans/: CODE_REVIEW_REPORT.md  REVIEW_ISSUES.md  code-review-deep.md  code-review-fix.md  memory-system-transformation.md
agent-tester/: .gitignore  README.md  config.example.yaml  pyproject.toml
agent-tester/src/agent_tester/: .gitignore  __init__.py  __main__.py  chat.py  cli.py  client.py  config.py  hippos.py  mcp.py  orchestrator.py
agent-tester/tests/: __init__.py  test_agent_tester.py
app/: main.py
app/api/routes/: audit.py  events.py  governance.py  query.py
app/core/: identity.py  settings.py
app/repository/: factory.py  in_memory_repository.py  surreal_repository.py  types.py
app/schemas/: common.py  events.py  query.py
app/services/: memory_service.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  IMPROVEMENT_PLAN.md  MIGRATION_PLAN_SURREALDB_TO_ARANGODB.md  PROJECT.md  PROJECT_STATUS.md  TODO.md  USER_MANUAL.md  deploy.md  release-checklist.md  runbook.md  架构设计文档.md
scripts/: db_check.sh  db_init.sh
src/: error.rs  lib.rs  main.rs
src/api/: AGENTS.md  api_tests.rs  app_state.rs  mod.rs
src/api/dto/: entity_dto.rs  memory_dto.rs  mod.rs  pattern_dto.rs  profile_dto.rs  search_dto.rs  session_dto.rs  turn_dto.rs
src/api/handlers/: entity_handler.rs  memory_handler.rs  mod.rs  pattern_handler.rs  profile_handler.rs  search_handler.rs  session_handler.rs  turn_handler.rs
src/api/routes/: entity_routes.rs  memory_routes.rs  mod.rs  pattern_routes.rs  profile_routes.rs  search_routes.rs  session_routes.rs  turn_routes.rs
src/config/: config.rs  loader.rs  mod.rs
src/index/: AGENTS.md  embedding.rs  full_text.rs  mod.rs  vector.rs
src/mcp/: mod.rs  server.rs  sse_server.rs
src/migration/: export.rs  import.rs  mod.rs  transform.rs
src/models/: AGENTS.md  entity.rs  entity_repository.rs  index_record.rs  memory.rs  memory_repository.rs  metadata.rs  mod.rs  pattern.rs  pattern_repository.rs  profile.rs  profile_repository.rs  session.rs  turn.rs
src/observability/: mod.rs
src/security/: AGENTS.md  auth.rs  config.rs  middleware.rs  mod.rs  rate_limit.rs  rbac.rs  security_tests.rs  validation.rs
src/services/: AGENTS.md  dehydration.rs  entity_manager.rs  memory_builder.rs  memory_integrator.rs  memory_recall.rs  mod.rs  pattern_manager.rs  performance.rs  profile_manager.rs  retrieval.rs
src/services/session/: mod.rs
src/services/turn/: mod.rs
src/storage/: AGENTS.md  arangodb.rs  arangodb_repository.rs  factory.rs  mod.rs  repository.rs  surrealdb.rs
src/websocket/: mod.rs  subscription.rs
tests/: memory_service_tests.rs
tests/unit/: test_api_smoke.py
