[package]
name = "hippos"
version = "0.1.0"
edition = "2024"
description = "Hippos - High-Performance Context Management Service for AI Agents"
authors = ["Hippos Team"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "hippos"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# === 异步运行时 ===
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# === Web 框架 ===
axum = { version = "0.7", features = ["json", "macros", "ws"] }
tower = { version = "0.4", features = ["util", "filter"] }
tower-http = { version = "0.5", features = ["cors", "trace", "normalize-path"] }

# === OpenAPI 文档 ===
utoipa = "5.4"
# utoipa-axum = "0.2"  # Pulls in axum 0.8.8 → tokio-tungstenite 0.24.0 (not cached)

# === 数据库 ===
arangors = { version = "0.6", optional = true }
bb8 = { version = "0.9", optional = true }
bb8-arangodb = { version = "0.2", optional = true }
surrealdb = { version = "2.0.0", optional = true, default-features = false, features = ["http", "kv-rocksdb"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
urlencoding = "2.1"

# === 配置管理 ===
config = "0.13"
figment = { version = "0.10", features = ["env", "toml", "yaml"] }

# === 错误处理 ===
anyhow = "1.0"
thiserror = "1.0"

# === 日志/追踪 ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# === 指标监控 ===
prometheus = "0.13"

# === 嵌入模型 ===
tokenizers = "0.22"
candle-core = "0.4"
candle-transformers = "0.4"

# Force half to v2.4.1 (rand_distr is optional dependency)
half = "=2.4.1"

# === 安全/加密 ===
openssl = { version = "0.10", features = ["vendored"] }
aes-gcm = "0.10"

# === Redis 客户端 (用于限流) ===
redis = { version = "0.25", features = ["tokio-native-tls-comp"] }

# === HTTP 客户端 ===
reqwest = { version = "0.11", features = ["json"] }

# === MCP 协议 ===
rmcp = { version = "0.2.1", features = ["macros", "transport-io"] }
schemars = "0.8"

# === 工具库 ===
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
parking_lot = "0.12"
once_cell = "1.19"
derive_more = { version = "1.0", features = ["display", "error"] }
regex = "1.12.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
validator = "0.20.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# === 特性 ===
[features]
default = ["surrealdb"]
surrealdb = ["dep:surrealdb"]
arangodb = ["dep:arangors", "dep:bb8", "dep:bb8-arangodb"]

# === 测试 ===
[dev-dependencies]
criterion = { version = "0.5", features = ["async"] }
fake = "2.9"
rstest = "0.18"
mockall = "0.12"
# axum-test = "18"  # Pulls in axum 0.8.8 → tokio-tungstenite 0.24.0 (not cached)
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace]
members = []
